--- a/surse.html
+++ b/surse.html
@@ -1,12 +1,9 @@
 <head>
   <title>Istorie si societate in dimensiunea virtuala</title>
-  <meta name="description" content="free website template" />
-  <meta name="keywords" content="enter your keywords here" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=9" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>
+  <link rel="shortcut icon" href="images/favicon.jpg" />
 </head>
 
 <body>
@@ -30,7 +27,7 @@
       <div id="content">
         <div class="content_item">
 			<h4>În lucrări recente de gândire critică şi nu numai sunt obişnuite şi alte perspective de discutare a sofismelor. De pildă, pe lângă prezentarea listată a erorilor logice, aşa cum apărea ea în vechile manuale de logică, sunt prezentaţi şi anumiţi factori care pot afecta calitatea argumentării, aşa-numitele surse ale gândirii necritice, ilogice. Factorii în cauză  fiind nu doar de tip logic, ci şi psihologic sau sociologic. De pildă, se vorbeşte despre experienţele personale, gândurile şi sentimentele noastre, care pot „sabota” eforturile noastre de a gândi critic . Unul dintre principiile psihologiei umane spune că, pe măsură ce starea emoţională este mai puternică, pe atât gândirea este mai neclară, iar comportamentul mai puţin temperat. Nimeni nu este imun la „obstacolele psihologice”, iar interesul personal poate depăşi bariera unei gândiri de calitate  iar a pune interesul personal la baza argumentărilor înseamnă a o abandona .
-        
+
 presiunea de grup: grup religios, politic, profesional, etnic etc. sau chiar familial.
 De cele mai multe ori, suntem presaţi să adoptăm idei, atitudini, ţeluri, dinspre grupurile din care facem parte, iar presiunea devine şi mai mare în momentul când grupurile intră în concurenţă pentru obţinerea a ceva şi intervin şi sloganuri mobilizatoare psihologic de tipul „Noi suntem mai buni” sau „Noi suntem cei mai buni”. Pot interveni în sabotarea gândirii critice şi anumite viziuni asupra lumii. Aşa ar fi relativismul subiectiv , care presupune că adevărul depinde de credinţele fiecăruia dintre noi („Acest enunţ este adevărat pentru mine”), întrucât adevărul obiectiv este dincolo de noi, de putinţa noastră de cunoaştere. </h4>
 <br></br>
